--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "loadash": "^1.0.0",
+    "lodash": "^4.17.21",
     "mongoose": "^6.3.3"
   },
   "devDependencies": {
