--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "fs": "^0.0.1-security",
     "loadash": "^1.0.0",
     "lodash": "^4.17.21",
-    "mongoose": "^6.3.3"
+    "mongoose": "^6.3.3",
+    "xml2js": "^0.4.23",
+    "xml2json": "^0.12.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
