--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon src/server.js",
-    "start": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js",
+    "start": "node index.js",
+    "test": "mocha tests --exit "
   },
   "author": "Jesús Manuel Dasilva B.",
   "license": "ISC",
@@ -17,13 +17,14 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "fs": "^0.0.1-security",
-    "loadash": "^1.0.0",
     "lodash": "^4.17.21",
     "mongoose": "^6.3.3",
-    "xml2js": "^0.4.23",
     "xml2json": "^0.12.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.16"
+    "chai": "^4.3.6",
+    "mocha": "^10.0.0",
+    "nodemon": "^2.0.16",
+    "supertest": "^6.2.3"
   }
 }
